add header, css tweaks

--- a/style.css
+++ b/style.css
@@ -3,15 +3,21 @@
     --border-width: 1.5px;
     --border-style: var(--border-width) solid #000000;
     --border-radius: 0.4em;
-    --between-weeks: 0.7em;
+    --between-weeks: 0.9em;
 }
 
 body {
     font-family: Calibri, 'Trebuchet MS', sans-serif;
 }
 
-#calendar {
-    font-size: 7.6pt;
+
+@media print {
+    .settings {
+        display: none;
+    }
+}
+
+.container {
     display: inline-block;
 }
 
@@ -23,7 +29,36 @@ body {
     background: black;
 }
 
+/* Header */
+
+.header {
+    display: grid;
+    grid-template-columns: auto auto;
+}
+
+.title {
+    font-size: 32pt;
+    padding-left: 1.6em;
+
+    display: flex;
+    align-items: center;
+}
+
+.year {
+    font-size: 40pt;
+    font-weight: bold;
+    padding-right: 0.15em;
+    display: flex;
+    align-items: center;
+    justify-content: right;
+}
+
 /* Grid */
+
+.calendar {
+    font-size: 7.6pt;
+    display: inline-block;
+}
 
 .month {
     display: grid;
@@ -37,6 +72,7 @@ body {
 }
 
 .day {
+    box-sizing: border-box;
     width: var(--box-size);
     height: var(--box-size);
     
@@ -79,4 +115,37 @@ body {
 
 .last-month .day {
     border-bottom: none;
+}
+
+/* Settings */
+
+.settings {
+    width: 24em;
+    border: 1px solid black;
+    margin: 2em 0 0 2em;
+    padding: 1em;
+}
+.settings h1 {
+    font-size: 14pt;
+    margin: 0 0 0.2em 0;
+}
+.settings form {
+    display: table;
+}
+.settings p {
+    display: table-row;
+}
+.settings label, .settings input {
+    display: table-cell;
+    margin-bottom: 0.3em;
+}
+.settings select, .settings input {
+    padding: 0.2em;
+}
+.settings label {
+    text-align: right;
+    padding-right: 0.5em;
+}
+.settings .titleInput {
+    width: 18em;
 }
